--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.16.2"
+    "@astrojs/mdx": "^4.3.12",
+    "@astrojs/sitemap": "^3.6.0",
+    "astro": "^5.16.2",
+    "sharp": "^0.34.3"
   }
 }
