--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@astrojs/mdx": "^4.3.12",
     "@astrojs/sitemap": "^3.6.0",
+    "@astrojs/ts-plugin": "^1.10.6",
     "astro": "^5.16.2",
-    "sharp": "^0.34.3"
+    "sharp": "^0.34.3",
+    "typescript": "^5.9.3"
   }
 }
