--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@astrojs/mdx": "^4.3.12",
     "@astrojs/sitemap": "^3.6.0",
     "@astrojs/ts-plugin": "^1.10.6",
+    "@tailwindcss/vite": "^4.1.17",
     "astro": "^5.16.2",
     "sharp": "^0.34.3",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3"
   }
 }
