--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
     "sharp": "^0.34.3",
     "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3"
+  },
+  "devDependencies": {
+    "prettier": "3.7.3",
+    "prettier-plugin-astro": "0.14.1",
+    "prettier-plugin-tailwindcss": "^0.7.1"
   }
 }
