--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@astrojs/mdx": "^4.3.12",
     "@astrojs/sitemap": "^3.6.0",
     "@astrojs/ts-plugin": "^1.10.6",
+    "@cooklang/cooklang-ts": "^1.2.8",
     "@tailwindcss/vite": "^4.1.17",
     "astro": "^5.16.2",
     "sharp": "^0.34.3",
     "tailwindcss": "^4.1.17",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vite-plugin-wasm": "^3.5.0"
   },
   "devDependencies": {
     "prettier": "3.7.3",
