Load posts from /var

--- a/.envrc
+++ b/.envrc
@@ -1,2 +1,6 @@
 # Load mise
 eval "$(mise activate bash)"
+
+# VPS settings
+export VPS_HOST=178.156.219.133
+export VPS_SSH_PUB_KEY="~/.ssh/proteus-softworks-github-deploy"
