--- a/mise.toml
+++ b/mise.toml
@@ -43,6 +43,6 @@ scp -i $VPS_SSH_PUB_KEY
 [tasks.publish]
 description = "Publish content"
 run = """
-mise scp -r ./src/content/posts/* deploy@$VPS_HOST:/var/lib/weblog/content/posts
-mise scp -r ./src/content/recipes/* deploy@$VPS_HOST:/var/lib/weblog/content/recipes
+mise scp -r ./src/content/posts deploy@$VPS_HOST:/var/lib/weblog/content/posts
+mise scp -r ./src/content/recipes deploy@$VPS_HOST:/var/lib/weblog/content/recipes
 """
