--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@cooklang/cooklang-ts": "^1.2.8",
     "@tailwindcss/vite": "^4.1.17",
     "astro": "^5.16.2",
+    "pino": "^10.1.0",
     "sharp": "^0.34.3",
     "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3",
