--- a/mise.toml
+++ b/mise.toml
@@ -28,12 +28,6 @@ run = "pnpm install"
 description = "Format files"
 run = "pnpm prettier --write ."
 
-[tasks.ssh]
-description = "SSH"
-run="""
-ssh -t -i $VPS_SSH_PUB_KEY deploy@$VPS_HOST
-"""
-
 [tasks.scp]
 description = "SCP"
 run="""
@@ -45,4 +39,22 @@ description = "Publish content"
 run = """
 mise scp -r ./src/content/posts deploy@$VPS_HOST:/var/lib/weblog/content/posts
 mise scp -r ./src/content/recipes deploy@$VPS_HOST:/var/lib/weblog/content/recipes
+"""
+
+[tasks."prod:ssh"]
+description = "SSH"
+run="""
+ssh -t -i $VPS_SSH_PUB_KEY deploy@$VPS_HOST
+"""
+
+[tasks."prod:shell"]
+description = "SSH into the docker shell"
+run="""
+mise prod:ssh 'docker compose --project-directory "/opt/apps" exec -it weblog /bin/bash'
+"""
+
+[tasks."prod:logs"]
+description = "Watch prod logs"
+run="""
+mise prod:ssh 'docker compose --project-directory "/opt/apps" logs -f weblog'
 """
