--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@astrojs/sitemap": "^3.6.0",
     "@astrojs/ts-plugin": "^1.10.6",
     "@cooklang/cooklang-ts": "^1.2.8",
+    "@fontsource/inter": "^5.2.8",
+    "@fontsource/neuton": "^5.2.7",
+    "@fontsource/sixtyfour-convergence": "^5.2.10",
+    "@fontsource/workbench": "^5.2.8",
     "@tailwindcss/vite": "^4.1.17",
     "astro": "^5.16.2",
     "sharp": "^0.34.3",
