--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@cooklang/cooklang-ts": "^1.2.8",
     "@fontsource/ibm-plex-mono": "^5.2.7",
     "@fontsource/inter": "^5.2.8",
+    "@fontsource/m-plus-1-code": "^5.2.8",
     "@fontsource/neuton": "^5.2.7",
     "@fontsource/sixtyfour-convergence": "^5.2.10",
     "@fontsource/workbench": "^5.2.8",
