--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vite-plugin-wasm": "^3.5.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "prettier": "3.7.3",
     "prettier-plugin-astro": "0.14.1",
     "prettier-plugin-tailwindcss": "^0.7.1"
