--- a/mise.toml
+++ b/mise.toml
@@ -34,6 +34,12 @@ run="""
 scp -i $VPS_SSH_PUB_KEY
 """
 
+[tasks.publish]
+description = "Publish content"
+run = """
+mise scp -r ./src/content/posts/* deploy@$VPS_HOST:/var/lib/weblog/content/posts
+"""
+
 [tasks."prod:ssh"]
 description = "SSH"
 run="""
