--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,8 @@ name: Deploy
 on:
   push:
     branches: [main]
+  repository_dispatch:
+    types: [content-update]
 
 env:
   REGISTRY: ghcr.io
@@ -17,6 +19,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+            submodules: recursive
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
