--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,8 +19,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-        with:
-            submodules: recursive
+
+      - name: Update submodules to latest remote
+        run: git submodule update --init --recursive --remote
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
