--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@fontsource/neuton": "^5.2.7",
     "@fontsource/sixtyfour-convergence": "^5.2.10",
     "@fontsource/workbench": "^5.2.8",
+    "@iconify-json/fa6-brands": "^1.2.6",
+    "@iconify-json/mdi": "^1.2.3",
     "@tailwindcss/vite": "^4.1.17",
     "astro": "^5.16.2",
+    "astro-icon": "^1.1.5",
     "sharp": "^0.34.3",
     "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3",
