--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@tailwindcss/vite": "^4.1.17",
     "astro": "^5.16.2",
     "astro-icon": "^1.1.5",
+    "axios": "^1.13.2",
+    "axios-cache-interceptor": "^1.11.2",
     "sharp": "^0.34.3",
     "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3",
