--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "sharp": "^0.34.3",
     "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3",
+    "unist-util-visit": "^5.0.0",
     "vite-plugin-wasm": "^3.5.0"
   },
   "devDependencies": {
