--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "astro-icon": "^1.1.5",
     "axios": "^1.13.2",
     "axios-cache-interceptor": "^1.11.2",
+    "gray-matter": "^4.0.3",
     "sharp": "^0.34.3",
     "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3",
